@@ -23,3 +23,5 @@
 20080206: Added note to installation docs to warn about linker issues with undefined symbols on some systems. Thanks to degraaf.
 
 20080207: Changed some shortcuts: AdvancePaperTrade (Ctrl+Right), Open Quote Dialog (Ctrl+Y), Quit (Ctrl+Q). Thanks to xley and suggestion by alexlong.
+
+20080219: Improved error reporting for CSV Quote plugin. Thanks to xley.
